[project]
name = "polypip"
version = "0.1.0"
authors = [
    { name="Alexander Crayton", email="alexppeltier@gmail.com"},
    { name="Parker Spaan", email="parkerspaan@yahoo.com"},
]
repository="https://github.com/admeeer/polypip"
description=""
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]
